hphp/hack/test/typecheck/expression_trees/pipe2.php.exp
File "pipe2.php", line 9, characters 70-124:
Wrong number of type arguments (expected 0, got 3) (Typing[4101])
  File "expr_tree.hhi", line 13, characters 7-16:
  Definition is here
File "pipe2.php", line 21, characters 30-52:
This value cannot be spliced into a `ExampleDsl` expression tree (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-27:
  Expected `ExampleDslExpression<T>` because you are splicing into a `ExampleDsl` expression or block
  File "pipe2.php", line 9, characters 70-124:
  But got `ExampleDsl`
  File "pipe2.php", line 21, characters 33-50:
  Hack values need to be lifted to compatible types before splicing. See https://docs.hhvm.com/hack/expression-trees/splicing for more information.
File "pipe2.php", line 21, characters 33-50:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 200, characters 5-27:
  Expected `Spliceable<ExampleDsl, mixed, _>`
  File "pipe2.php", line 9, characters 70-124:
  But got `ExampleDsl`
